objects/OEM_Mapping_Rule__c.object
<CustomObject>
    <description>OEM Mapping Rule for Consumer Device</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <label>Allocation(%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Calendar_Month__c</fullName>
        <formula>CASE(text( Fiscal_Month__c ), &apos;01&apos;, &apos;Oct&apos;, &apos;02&apos;, &apos;Nov&apos;,&apos;03&apos;,&apos;Dec&apos;,&apos;04&apos;,&apos;Jan&apos;,&apos;05&apos;,&apos;Feb&apos;,&apos;06&apos;,&apos;Mar&apos;,&apos;07&apos;,&apos;Apr&apos;,&apos;08&apos;,&apos;May&apos;,&apos;09&apos;,&apos;Jun&apos;,&apos;10&apos;,&apos;Jul&apos;,&apos;11&apos;,&apos;Aug&apos;,&apos;Sep&apos;)</formula>
        <label>Calendar Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Year__c</fullName>
        <formula>IF( (Value(text(Fiscal_Month__c))&lt;4) , text(Value(text( Fiscal_Year__c ))-1),text( Fiscal_Year__c ) )</formula>
        <label>Calendar Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Month__c</fullName>
        <inlineHelpText>1 = Oct
2 = Nov
3 = Dec
4 = Jan
5 = Feb
6 = Mar
7 = Apr
8 = May
9 = Jun
10 = Jul
11 = Aug
12 = Sep</inlineHelpText>
        <label>Fiscal Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <default>true</default>
                    <label>01</label>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2013</fullName>
                    <default>true</default>
                    <label>2013</label>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OEM_Account__c</fullName>
        <formula>OEM__r.OEM__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OEM Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OEM__c</fullName>
        <label>OEM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Fiscal_Year__c</field>
                <operation>equals</operation>
                <valueField>OEM_Details__c.Fiscal_Year__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Fiscal_Month__c</field>
                <operation>equals</operation>
                <valueField>OEM_Details__c.Fiscal_Month__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>OEM_Details__c</referenceTo>
        <relationshipLabel>OEM Mappings</relationshipLabel>
        <relationshipName>OEM_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipName>OEM_Mapping_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account_Code_Add_0__c</fullName>
        <formula>LPAD(Sold_To_Account_Code__c ,8,&apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold_To_Account_Code_Add_0</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account_Code__c</fullName>
        <label>Sold To Account Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account_Name__c</fullName>
        <label>Sold To Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tech_Backlog__c</fullName>
        <label>Tech_Backlog</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Billing__c</fullName>
        <label>Tech_Billing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Booking__c</fullName>
        <label>Tech_Booking</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Cutoff_Date__c</fullName>
        <formula>OEM__r.Tech_CutoffDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tech_Cutoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tech_Isvalid__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Tech_Isvalid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tech_Latest_SA__c</fullName>
        <label>Tech_Latest_SA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_MTD_Billing__c</fullName>
        <label>Tech_MTD_Billing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tech_Part_Number__c</fullName>
        <formula>Part_Number__r.Name</formula>
        <label>Tech Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WWAC</fullName>
                    <default>true</default>
                    <label>WWAC</label>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>PN</fullName>
                </value>
                <value>
                    <fullName>WWAC+PN</fullName>
                </value>
                <value>
                    <fullName>Customer+PN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WWAC__c</fullName>
        <label>World Wide Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Worldwide_Account_Name__c</fullName>
        <label>Worldwide Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wwac_in_8__c</fullName>
        <formula>LPAD(WWAC__c, 8 , &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>wwac_number_in_8_character</label>
        <type>Text</type>
    </fields>
    <label>CSD OEM Mapping</label>
    <nameField>
        <displayFormat>CSD-OEM-{0000000000}</displayFormat>
        <label>OEM Mapping Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OEM Mappings</pluralLabel>
    <recordTypes>
        <fullName>OEM_Read_Only</fullName>
        <active>true</active>
        <description>OEM Read only for Active OEM Mapping Records</description>
        <label>OEM Read Only</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Allocation_Validation_Rule</fullName>
        <active>true</active>
        <description>Allocation cannot exceed 100%</description>
        <errorConditionFormula>Allocation__c &gt;1</errorConditionFormula>
        <errorDisplayField>Allocation__c</errorDisplayField>
        <errorMessage>Allocation cannot exceed 100%!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Part_Number_Validation</fullName>
        <active>true</active>
        <description>Part Number field is required if the Type Picklist value is PN.</description>
        <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;PN&apos;) , 
      ISBLANK( Part_Number__c ) 
     )</errorConditionFormula>
        <errorMessage>Please define Part Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_To_Account_Code_Validation</fullName>
        <active>true</active>
        <description>Sold To Account Code is required if Type picklist value is Customer</description>
        <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;Customer&apos;),
      ISBLANK( Sold_To_Account_Code__c) 
     )</errorConditionFormula>
        <errorMessage>Please Define Sold To Account Code</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sold_To_Account_Code_and_Part_Number_Val</fullName>
        <active>true</active>
        <description>Sold To Account Code &amp; Part Number are required when the Type picklist value is Customer+PN</description>
        <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;Customer+PN&apos;) ,
       OR( ISBLANK( Sold_To_Account_Code__c ) , ISBLANK( Part_Number__c ) ) 
     )</errorConditionFormula>
        <errorMessage>Please define Sold To Account Code/ Part Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WWAC_Mandatory_Validation_based_on_Type</fullName>
        <active>true</active>
        <description>World Wide Account Number is required if the Type is WWAC</description>
        <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;WWAC&apos;), ISBLANK(WWAC__c) 
    )</errorConditionFormula>
        <errorMessage>Please define World Wide Account Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WWAC_and_Part_Number_Validation</fullName>
        <active>true</active>
        <description>WWAC and Part Number fields are required when the Type picklist value is WWAC+PN</description>
        <errorConditionFormula>AND( ISPICKVAL( Type__c , &apos;WWAC+PN&apos;),           
      OR( ISBLANK( WWAC__c ) , 
          ISBLANK( Part_Number__c ) 
         )  
     )</errorConditionFormula>
        <errorMessage>Please define  World Wide Account Number/Part Number</errorMessage>
    </validationRules>
</CustomObject>